<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/intro_background"
    tools:context=".activities.IntroActivity">

    <TextView
        android:id="@+id/tv_app_name_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="@color/sky_blue"
        android:fontFamily="@font/weloved_freetrial"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/image_file"
        android:src="@drawable/ic_task_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Let's Get started"
        android:textColor="@color/gray_color"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:text="Collaborate and Plan Together Across Multiple Devices on Projemanage's Minimalist Interface"
        android:textColor="@color/light_gray"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_sign_in_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shape_button_rounded"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_sign_up_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/white_border_shape_button"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:text="@string/sign_up"
        android:textColor="@color/sky_blue"
        android:textSize="15sp" />

</LinearLayout>