<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_dialog_rounded"
        app:cardCornerRadius="3dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

        <TextView
            android:id="@+id/tvDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_member"
            android:padding="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/primary_text_color" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:background="@color/divider_color" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/sky_blue"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email_search_member"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColor="@color/light_gray"
                    android:backgroundTint="@color/sky_blue"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_add"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/add"
                    android:textColor="@color/sky_blue"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/cancel"
                    android:textSize="16sp" />

            </LinearLayout>



        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>