<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:elevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_add_task_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/task_list_action_color"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/add_list"
            android:layout_margin="5dp"
            android:textColor="@color/sky_blue"
            android:textSize="16sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_add_task_list_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:visibility="gone"
            app:cardCornerRadius="5dp"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ib_close_list_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/cancel_button_1"
                    android:padding="10dp"
                    android:src="@drawable/ic_cancel" />

                <EditText
                    android:id="@+id/et_task_list_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@color/sky_blue"
                    android:textColor="@color/light_gray"
                    android:backgroundTint="@color/sky_blue"
                    android:layout_weight="1"
                    android:autofillHints="LIST NAME"
                    android:hint="@string/list_name"
                    android:inputType="text" />

                <ImageButton
                    android:id="@+id/ib_done_list_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="Correct Image"
                    android:padding="10dp"
                    android:src="@drawable/ic_done" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/ll_task_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/task_list_action_color"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_margin="5dp"
            tools:visibility="visible">

            <LinearLayout
                android:id="@+id/ll_title_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/task_list_title_view_bg_color"
                android:elevation="15dp"
                android:gravity="center"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:visibility="visible"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/tv_task_list_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:textColor="@color/sky_blue"
                    android:textSize="16sp"
                    tools:text="Title" />

                <ImageButton
                    android:id="@+id/ib_edit_list_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/edit_button"
                    android:padding="10dp"
                    android:src="@drawable/ic_create" />

                <ImageButton
                    android:id="@+id/ib_delete_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/delete_button"
                    android:padding="10dp"
                    android:src="@drawable/ic_delete" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divider_color" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_edit_task_list_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="0.5dp"
                android:visibility="gone"
                app:cardCornerRadius="5dp"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/ib_close_editable_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/cancel_button_2"
                        android:padding="10dp"
                        android:src="@drawable/ic_cancel" />

                    <EditText
                        android:id="@+id/et_edit_task_list_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textCursorDrawable="@color/sky_blue"
                        android:backgroundTint="@color/sky_blue"
                        android:textColor="@color/light_gray"
                        android:autofillHints="List Name"
                        android:hint="@string/list_name"
                        android:inputType="text" />

                    <ImageButton
                        android:id="@+id/ib_done_edit_list_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="Correct Button"
                        android:padding="10dp"
                        android:src="@drawable/ic_done" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_card_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_add_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:visibility="gone"
                android:layout_margin="5dp"
                app:cardCornerRadius="5dp"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/ib_close_card_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/canceled"
                        android:padding="10dp"
                        android:src="@drawable/ic_cancel" />

                    <EditText
                        android:id="@+id/et_card_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textCursorDrawable="@color/sky_blue"
                        android:backgroundTint="@color/sky_blue"
                        android:textColor="@color/light_gray"
                        android:autofillHints="CARD NAME"
                        android:hint="@string/card_name"
                        android:inputType="text" />

                    <ImageButton
                        android:id="@+id/ib_done_card_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/delete3"
                        android:padding="10dp"
                        android:src="@drawable/ic_done" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_add_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/task_list_action_color"
                android:elevation="5dp"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:text="@string/add_card"
                android:textColor="@color/sky_blue"
                android:textSize="18sp"
                tools:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>