<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_background"
    tools:context=".activities.SignIn">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_sign_in_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enter_your_email_id_and_password_to_register_with_us"
            android:textColor="@color/light_gray"
            android:textSize="15sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:elevation="5dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextColor="@color/sky_blue"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_email_signin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_gray"
                        android:backgroundTint="@color/sky_blue"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    app:hintTextColor="@color/sky_blue"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="10dp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_password_signin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/sky_blue"
                        android:textColor="@color/light_gray"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/shape_button_rounded"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/sign_in"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</LinearLayout>